--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+    body{background-color: black;}
+</style>
 <body>
-    <!--<th:fragment="nav">-->
-        <!--&lt;!&ndash;put nav code here&ndash;&gt;-->
-    <!--</th>-->
+    <img src="https://res.cloudinary.com/japes930/image/upload/v1562705802/2018-nhl-stanley-cup-final-game-five-681x383_b2rayh.jpg">
+    <img src="https://res.cloudinary.com/japes930/image/upload/v1562705697/21825528b6bc9dbae9bca63edcf746a9_lhwkd3.jpg">
+    <img src="https://res.cloudinary.com/japes930/image/upload/v1562704769/scrum-rugby-9_xcqry4.jpg">
+    <img src=""
 </body>
 </html>
