--- a/src/main/resources/templates/gaming.html
+++ b/src/main/resources/templates/gaming.html
@@ -1,56 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <!--What is this for below?-->
     <meta name = "viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
     <!--<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">-->
-    <link rel="stylesheet" type="text/css" href="resources/static/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
     <title>gaming</title>
-    <style>
-        .topnav {
-            background-color: #333;
-            overflow: hidden;
-        }
-        .topnav a {
-            float: left;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-        img{
-            height:10rem;
-            width:20rem;
-            border-radius: 10px;
-        }
-        .sidespan{
-            background-color: #524644;
-            width: 15%;
-        }
-        body{background-color:#ffffff;
-        overflows:hidden;}
-    </style>
 </head>
-<body>
+
+<body style="background-image: url(https://res.cloudinary.com/japes930/image/upload/v1562697561/flow_c7ykgs.jpg);">
 <!--<th:block th:replace="~{index::nav}"></th:block>-->
-    <div class = "topnav">
-        <a href="#home">Home</a>
-        <a href="#gaming">Gaming</a>
-        <a href="#netflix">Netflix</a>
-        <a href="#exercise">Exercise</a>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Hobbies</a>
+        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+        <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/gaming.html">Gaming</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Workouts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/netflix.html">Netflix</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 
 
-    <div style="display:flex";>
+    <div id="content" style="display:flex";>
         <span class = "column, sidespan" style = "width:15%;"></span>
-        <div class = "gaming-container" style="flex-direction:column; width:70%;">
+        <div id = "gaming-container" style="flex-direction:column; width:70%; height: 100% ">
             <div style="display:flex; flex-direction:row; justify-content: space-around;">
-                <img src="https://assets.rockpapershotgun.com/images/2018/10/BlopsBlackout1.jpg">
-                <img src="https://s3.amazonaws.com/prod-media.gameinformer.com/styles/body_default/s3/2018/09/08/6de0050c/Costantino%20Gallo.jpg">
+
+                <!--Rainbow Six carousel-->
+                <div id = "rb6_carousel" class="carousel slide carousel-fade" data-ride="carousel">
+                    <!--<ol class="carousel-indicators">-->
+                        <!--<li data-target="#carouselExampleIndicators" data-slide-to="0"></li>-->
+                        <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+                        <!--<li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>-->
+                    <!--</ol>-->
+                    <div class="carousel-inner">
+                        <div class="carousel-item view overlay zoom">
+                            <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/rb62_shi8d9.jpg" class="d-block w-100" alt="...">
+                            <!--Tried to -->
+                            <!--<div class="mask flex-center rgba-red-strong">-->
+                                <!--<p class="white-text">Rainbow Six Siege</p>-->
+                            <!--</div>-->
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/japes930/image/upload/v1562685624/rb61_malqn9.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="https://res.cloudinary.com/japes930/image/upload/v1562686226/3556740-gsnu_rainbowsixshowdown_20190703_site_diyczq.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#rb6_carousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#rb6_carousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </a>
+                </div>
+
+                <!--Spiderman Carousel-->
+                <div class="bd-example">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/spiderman1_jpj9dj.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Spider Man</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/spiderman3_gwrwth.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Second slide label</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/spiderman2_yn8dtt.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Third slide label</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
                 <img src="http://media.contentapi.ea.com/content/www-easports/en_US/nhl-19/news/2018/nhl-19-features-blog/_jcr_content/imageShare.img.jpg">
             </div>
 
