Added splash page photos

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,6 @@
     <img src="https://res.cloudinary.com/japes930/image/upload/v1562705802/2018-nhl-stanley-cup-final-game-five-681x383_b2rayh.jpg">
     <img src="https://res.cloudinary.com/japes930/image/upload/v1562705697/21825528b6bc9dbae9bca63edcf746a9_lhwkd3.jpg">
     <img src="https://res.cloudinary.com/japes930/image/upload/v1562704769/scrum-rugby-9_xcqry4.jpg">
-    <img src=""
+    <img src="https://res.cloudinary.com/japes930/image/upload/v1562708953/ba7b2e59f0a9f9de-600x338_itudnr.png">
 </body>
 </html>
