--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -20,6 +20,9 @@ body{
     text-decoration: none;
     font-size: 17px;
 }
+/*************************************************/
+/***********    Landing Page CSS    **************/
+/*************************************************/
 #landing-container img{
     -webkit-filter: grayscale(1);
     padding:0.5rem;
@@ -49,11 +52,26 @@ body{
     vertical-align: center;
 }
 
+/*************************************************/
+/******            Gaming Styles          ********/
+/*************************************************/
+
 /*.netflix-container, */
+#gaming-container{
+    flex-direction:column;
+    width:70%;
+    height: 100%;
+    background-color: #ffffff;
+}
 .carousel{
     height:15rem;
     width:30rem;
     border-radius: 10px;
+}
+
+.carousel-item>div{
+    background-color:rgba(0, 0, 0, 0.7);
+    padding:0.5rem;
 }
 #gaming-container img{
     height:15rem;
@@ -71,14 +89,120 @@ body{
     /*background-color: #524644;*/
     width: 15%;
 }
-#gaming-container{
-    flex-direction:column;
-    width:70%;
-    height: 100%;
-    background-color: #ffffff;
-    padding-top: 3rem;
-}
 #gaming-container + div{
     padding: 3rem;
 
 }
+/*---------------------------------------------*/
+/*              For Timeline                   */
+/*---------------------------------------------*/
+* {
+    box-sizing: border-box;
+}
+#gaming-container>h2{
+    background-color: #343a40;
+    color: white;
+    padding:1rem;
+    text-align:center;
+}
+#gaming-container>h1{
+    color: #474e5d;
+    padding: 1rem;
+    text-align:center;
+}
+
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    /*max-width: 1200px;*/
+    margin: 0 auto;
+    background-color: #343a40;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container around content */
+.tl-container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 35%;
+}
+
+/* The circles on the timeline */
+.tl-container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+    left: -17.8%;
+}
+
+/* Place the container to the right */
+.right {
+    left: 17.8%;
+    text-align: right;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -18px;
+}
+
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+}
+
