--- a/src/main/resources/templates/gaming.html
+++ b/src/main/resources/templates/gaming.html
@@ -16,36 +16,16 @@
 
 <body style="background-image: url(https://res.cloudinary.com/japes930/image/upload/v1562697561/flow_c7ykgs.jpg);">
 <div th:replace="base :: navlinks"></div>
-<!--<th:block th:replace="~{index::nav}"></th:block>-->
-    <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
-        <!--<a class="navbar-brand" href="#">Hobbies</a>-->
-        <!--&lt;!&ndash;<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">&ndash;&gt;-->
-        <!--&lt;!&ndash;<span class="navbar-toggler-icon"></span>&ndash;&gt;-->
-        <!--&lt;!&ndash;</button>&ndash;&gt;-->
-        <!--<div class="collapse navbar-collapse" id="navbarNav">-->
-            <!--<ul class="navbar-nav">-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link active" href="/gaming.html">Gaming</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="/">Workouts</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="/netflix.html">Netflix</a>-->
-                <!--</li>-->
-
-            <!--</ul>-->
-        <!--</div>-->
-    <!--</nav>-->
-
 
     <div id="content" style="display:flex";>
         <span class = "column, sidespan" style = "width:15%;"></span>
         <div id = "gaming-container" style="flex-direction:column; width:70%; height: 100% ">
+            <h1>Currently Playing</h1>
             <div style="display:flex; flex-direction:row; justify-content: space-around;">
 
                 <!--Rainbow Six carousel-->
-                <div id = "rb6_carousel" class="carousel slide carousel-fade" data-ride="carousel">
+                     <!--Removed carousel-fade-->
+                <div id = "rb6_carousel" class="carousel slide shadow-lg" data-ride="carousel">
                     <!--<ol class="carousel-indicators">-->
                         <!--<li data-target="#carouselExampleIndicators" data-slide-to="0"></li>-->
                         <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
@@ -54,16 +34,16 @@
                     <div class="carousel-inner">
                         <div class="carousel-item">
                             <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/rb62_shi8d9.jpg" class="d-block w-100" alt="...">
-                            <!--Tried to -->
-                            <!--<div class="mask flex-center rgba-red-strong">-->
-                                <!--<p class="white-text">Rainbow Six Siege</p>-->
-                            <!--</div>-->
                         </div>
+
                         <div class="carousel-item">
                             <img src="https://res.cloudinary.com/japes930/image/upload/v1562685624/rb61_malqn9.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item active">
                             <img src="https://res.cloudinary.com/japes930/image/upload/v1562686226/3556740-gsnu_rainbowsixshowdown_20190703_site_diyczq.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block" style="background-color:rgba(0, 0, 0, 0.7)">
+                                <h5>Rainbow Six Siege</h5>
+                            </div>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#rb6_carousel" role="button" data-slide="prev">
@@ -75,31 +55,26 @@
                 </div>
 
                 <!--Spiderman Carousel-->
-                <div class="bd-example">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+
+                    <div id="carouselExampleCaptions" class="carousel slide shadow" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item">
                                 <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/spiderman1_jpj9dj.jpg" class="d-block w-100" alt="...">
+
+                            </div>
+                            <div class="carousel-item active">
+                                <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/spiderman3_gwrwth.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Spider Man</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/spiderman3_gwrwth.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
                                 <img src="https://res.cloudinary.com/japes930/image/upload/v1562685625/spiderman2_yn8dtt.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                </div>
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -111,15 +86,58 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
-                </div>
+
                 <img src="http://media.contentapi.ea.com/content/www-easports/en_US/nhl-19/news/2018/nhl-19-features-blog/_jcr_content/imageShare.img.jpg">
             </div>
 
             <div style="display:flex; flex-direction:row; justify-content: space-around; padding:5% 20%">
-                <img src="https://i.ytimg.com/vi/7KiKb5q9d9o/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCqXTRvXonFvHyugybDOGxdAPlbFw">
+                <img class="shadow-lg" src="https://i.ytimg.com/vi/7KiKb5q9d9o/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCqXTRvXonFvHyugybDOGxdAPlbFw">
                 <!--<img src="/images/fo42.jpg">--><span style="padding: 5%"></span>
-                <img src="https://cdn.images.express.co.uk/img/dynamic/143/590x/Fallout-4-mods-launching-with-update-1-8-733074.jpg">
+                <img class="shadow-lg" src="https://cdn.images.express.co.uk/img/dynamic/143/590x/Fallout-4-mods-launching-with-update-1-8-733074.jpg">
             </div>
+
+            <!--Timeline-->
+
+            <h2>Upcoming Games</h2>
+            <div class="timeline">
+
+                <div class="tl-container container left">
+                    <div class="content">
+                        <h3>Borderlands 3</h3>
+                        <p>September 13, 2019</p>
+                    </div>
+                </div>
+                <div class="tl-container container right">
+                    <div class="content">
+                        <h3>Call of Duty: Modern Warfare</h3>
+                        <p>October 28, 2019</p>
+                    </div>
+                </div>
+                <div class="tl-container container left">
+                    <div class="content">
+                        <h3>Star Wars: Jedi Fallen Orer</h3>
+                        <p>November 15, 2019</p>
+                    </div>
+                </div>
+                <div class="tl-container container right">
+                    <div class="content">
+                        <h3>Rainbow 6: Quarantine</h3>
+                        <p>Est. January 2020</p>
+                    </div>
+                </div>
+                <div class="tl-container container left" style="margin-top:-5rem;">
+                    <div class="content">
+                        <h3>Last of Us 2</h3>
+                        <p>Est. February 2020</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
         </div>
         <span class = "column, sidespan" style="width:15%;"></span>
     </div>
